# arnando

./: Dockerfile  README.md  render.yaml  requirements.txt  setup.py
backend/: .env  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: auth.py  config.py  crud.py  database.py  main.py  models.py  schemas.py
docs/: index.html
docs/js/: api.js  app.js  calculator.js  cloudSync.js  notifications.js  printManager.js  router.js
docs/pages/: contracts.html
docs/styles/: style.css
frontend/js/: app.js  auth.js  charts.js  database.js
frontend/pages/: analytics.html  calculator.html  dashboard.html  objects.html  profile.html
