[tool.poetry]
name = "rent-tax-backend"
version = "0.1.0"
description = "Rent Tax API Backend"
authors = ["Your Name <email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "0.24.0"}
sqlalchemy = "2.0.23"
psycopg2-binary = "2.9.9"
passlib = {extras = ["bcrypt"], version = "1.7.4"}
python-jose = {extras = ["cryptography"], version = "3.3.0"}
python-multipart = "0.0.6"
alembic = "1.12.1"
pydantic = "2.5.3"
python-dotenv = "1.0.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
